# whatever

./: .gitignore  .gitmodules  README.md
Machine_Learning/books/Nikolenko_Deep_Learning/practice/2/: 2.ipynb
Machine_Learning/courses/Standford_CS224n/classes/1/: Lecture notes.ipynb  Word2Vec paper(s) review.ipynb
trt/example/: CMakeLists.txt  builder.cpp  builder.h  main.cpp  options_binder.cpp  options_binder.h  utils.cpp  utils.h
